--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,4 +26,6 @@ dependencies = [
     # --- Optional ---
     "langchain-text-splitters>=0.0.1",
     "dotenv>=0.9.9",
+    "numpy>=2.3.4",
+    "watchdog>=6.0.0",
 ]
