--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-GOOGLE_API_KEY=AIzaSyDt32R_tLo4uEk9O3vM5Ajb12rBdjGKYn0
+GOOGLE_API_KEY='AIzaSyATMRRZMgDdFXFtNbDYFH8qCNOT4LktgkM'
+# PostgreSQL Credentials
+PGHOST='localhost'
+PGPORT='5432'
+PGDATABASE='pdf_retriever'
+PGUSER='postgres'
+PGPASSWORD='password'
