--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,4 +35,8 @@ dependencies = [
     "sqlalchemy>=2.0.44",
     "psycopg2-binary>=2.9.11",
     "bcrypt>=5.0.0",
+    "fastapi>=0.115.0",
+    "uvicorn>=0.30.0",
+    "python-jose[cryptography]>=3.3.0",
+    "python-multipart>=0.0.10",
 ]
